--- a/views/watch.ejs
+++ b/views/watch.ejs
@@ -16,7 +16,5 @@
     </div>
   </div>
 
-  <div class="meta">
-    <p><%= v.description || '' %></p>
-  </div>
+  <div class="meta"><p><%= v.description || '' %></p></div>
 </section>
