--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,4 +21,7 @@
 
   <footer class="site-footer"><div class="container">© <%= new Date().getFullYear() %> Video Portal</div></footer>
 </body>
+    <!-- Ads Loader -->
+    <script src="/ads-loader.js"></script>
+  </body>
 </html>
