--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,5 +32,9 @@
 
   <!-- Ads Loader (otomatis nonaktif di /admin) -->
   <script src="/ads-loader.js?v=1"></script>
+<% if (!(page || '').startsWith('admin')) { %>
+<script type="text/javascript" src="//pl27528520.effectivecpmrate.com/50/fc/b0/50fcb0851ba2e6f04e98b3058b421693.js" data-cfasync="false"></script>
+<script type="text/javascript" src="//pl27528539.effectivecpmrate.com/24/e5/3f/24e53f9b46e63b6c19a43ce8e5afc0d5.js" data-cfasync="false"></script>
+<% } %>
 </body>
 </html>
