--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,8 +21,8 @@
   <link rel="preconnect" href="https://pl27528539.effectivecpmrate.com" crossorigin>
   <link rel="dns-prefetch" href="//pl27528520.effectivecpmrate.com">
   <link rel="preconnect" href="https://pl27528520.effectivecpmrate.com" crossorigin>
-  <link rel="dns-prefetch" href="//agaenteitor.com">
-  <link rel="preconnect" href="https://agaenteitor.com" crossorigin>
+  <link rel="dns-prefetch" href="//vemtoutcheeg.com">
+  <link rel="preconnect" href="https://vemtoutcheeg.com" crossorigin>
 </head>
 <body class="page-<%= page || 'home' %>">
   <header class="site-header">
