--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,17 +10,15 @@
   <meta name="description" content="<%= D %>" />
   <% if (S.canonical) { %><link rel="canonical" href="<%= S.canonical %>" /><% } %>
 
-  <!-- ====== SPEED UP ADS: DNS Prefetch + Preconnect (letakkan sedini mungkin) ====== -->
-  <!-- Adsterra banner 300x250 -->
+  <!-- ====== SPEED UP ADS ====== -->
+  <!-- Adsterra banner -->
   <link rel="dns-prefetch" href="//www.highperformanceformat.com">
   <link rel="preconnect" href="https://www.highperformanceformat.com" crossorigin>
-
   <!-- effectivecpmrate (Popunder & Social Bar) -->
   <link rel="dns-prefetch" href="//pl27528539.effectivecpmrate.com">
   <link rel="preconnect" href="https://pl27528539.effectivecpmrate.com" crossorigin>
   <link rel="dns-prefetch" href="//pl27528520.effectivecpmrate.com">
   <link rel="preconnect" href="https://pl27528520.effectivecpmrate.com" crossorigin>
-
   <!-- Monetag In-Page (non-adblock) -->
   <link rel="dns-prefetch" href="//vemtoutcheeg.com">
   <link rel="preconnect" href="https://vemtoutcheeg.com" crossorigin>
